tests/miniJava/neg/002626_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = 0 public int [] java ( ) { return 0 ; } java ( ) ; } }
